<?xml version="1.0" encoding="utf-8"?>

<resources>
    <string name="app_name">Focus Flow</string>
    <string name="welcome_back">Welcome Back!</string>
    <string name="log_in">Please, Log In</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="password_forgotten">Did you forget your password?</string>
    <string name="or">or</string>
    <string name="account_creation">Create An Account</string>
    <string name="sign_up">Sign Up</string>
    <string name="name">Name</string>
    <string name="hi_user">Hi, User</string>
    <string name="let_s_make_today_productive">Let\'s make today productive!</string>
    <string name="hi_there">Hi there!</string>
    <string name="username">Username</string>
    <string name="today_task">Today task</string>
    <string name="account">Account</string>
    <string name="task">Task</string>
    <string name="timer">Timer</string>
    <string name="home">Home</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="week_overview">Week Overview</string>
    <string name="letter_monday">M</string>
    <string name="letter_tuesday">T</string>
    <string name="letter_wednesday">W</string>
    <string name="letter_thursday">T</string>
    <string name="letter_friday">F</string>
    <string name="letter_saturday">S</string>
    <string name="letter_sunday">S</string>
    <string name="my_tasks">My task</string>
    <string name="timer_type">Timer tipe</string>
    <string name="task_name">Task name</string>
    <string name="create_task">Create task</string>
    <string name="total_time_accumulated">Total time accumulated</string>
</resources>