<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/login_background">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white_transparent"
            android:elevation="4dp"
            app:title="@string/app_name"
            app:menu="@menu/top_app_bar">
        </androidx.appcompat.widget.Toolbar>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="?attr/actionBarSize">


            <TextView
                android:id="@+id/WeekOverviewText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/week_overview"
                android:textColor="@color/md_theme_inversePrimary_mediumContrast"
                android:textSize="@dimen/size_verylarge"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <RadioGroup
                android:id="@+id/radioGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:elevation="2dp"
                android:gravity="center"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/WeekOverviewText">

                <RadioButton
                    android:id="@+id/radioButtonMonday"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/radio_week_button_default"
                    android:button="@android:color/transparent"
                    android:gravity="center"
                    android:text="@string/letter_monday"
                    android:textColor="@color/md_theme_scrim"
                    android:textSize="24sp" />

                <RadioButton
                    android:id="@+id/radioButtonTuesday"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="6dp"
                    android:background="@drawable/radio_week_button_default"
                    android:button="@android:color/transparent"
                    android:gravity="center"
                    android:text="@string/letter_tuesday"
                    android:textColor="@color/md_theme_scrim"
                    android:textSize="24sp" />

                <RadioButton
                    android:id="@+id/radioButtonWednesday"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="6dp"
                    android:background="@drawable/radio_week_button_default"
                    android:button="@android:color/transparent"
                    android:gravity="center"
                    android:text="@string/letter_wednesday"
                    android:textColor="@color/md_theme_scrim"
                    android:textSize="24sp" />

                <RadioButton
                    android:id="@+id/radioButtonThursday"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="6dp"
                    android:background="@drawable/radio_week_button_default"
                    android:button="@android:color/transparent"
                    android:gravity="center"
                    android:text="@string/letter_thursday"
                    android:textColor="@color/md_theme_scrim"
                    android:textSize="24sp" />

                <RadioButton
                    android:id="@+id/radioButtonFriday"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="6dp"
                    android:background="@drawable/radio_week_button_default"
                    android:button="@android:color/transparent"
                    android:gravity="center"
                    android:text="@string/letter_friday"
                    android:textColor="@color/md_theme_scrim"
                    android:textSize="24sp" />

                <RadioButton
                    android:id="@+id/radioButtonSaturday"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="6dp"
                    android:background="@drawable/radio_week_button_default"
                    android:button="@android:color/transparent"
                    android:gravity="center"
                    android:text="@string/letter_saturday"
                    android:textColor="@color/md_theme_scrim"
                    android:textSize="24sp" />

                <RadioButton
                    android:id="@+id/radioButtonSunday"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="6dp"
                    android:background="@drawable/radio_week_button_default"
                    android:button="@android:color/transparent"
                    android:gravity="center"
                    android:text="@string/letter_sunday"
                    android:textColor="@color/md_theme_scrim"
                    android:textSize="24sp" />
            </RadioGroup>

            <TextView
                android:id="@+id/my_task_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="28dp"
                android:text="@string/my_tasks"
                android:textColor="@color/md_theme_inversePrimary_mediumContrast"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.01"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_view"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:padding="16dp"
                app:layout_constraintBottom_toTopOf="@+id/bottom_navigation"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/my_task_text"
                tools:listitem="@layout/item_task" />

            <com.google.android.material.bottomnavigation.BottomNavigationView
                android:id="@+id/bottom_navigation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white_transparent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:menu="@menu/bottom_navigation_menu" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/fab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/create_task"
                android:src="@drawable/ic_add_button"
                app:layout_constraintBottom_toBottomOf="@+id/recycler_view"
                app:layout_constraintEnd_toEndOf="@+id/recycler_view" />

        </androidx.constraintlayout.widget.ConstraintLayout>




    </FrameLayout>
</layout>